--- a/static/css/common.less
+++ b/static/css/common.less
@@ -12,7 +12,8 @@ body{
         width:1160px;
         margin:0 auto;
         .logo{
-            width:158px;
+            // width:158px;
+            width: auto;
             height:60px;
             float:left;
         }
