--- a/static/css/common.css
+++ b/static/css/common.css
@@ -14,7 +14,7 @@ body {
   margin: 0 auto;
 }
 .header .content .logo {
-  width: 158px;
+  width: auto;
   height: 60px;
   float: left;
 }
@@ -982,8 +982,8 @@ body {
   font-size: 0.875rem;
   background: #000;
   color: #fff;
-  -webkit-transition-duration: .2s;
-  transition-duration: .2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   z-index: 100;
   opacity: 0;
   filter: alpha(opacity=0);
